<resources>
    <string name="app_name">Movies TMDB</string>

    // Bottom Navigation
    <string name="bn_home">Home</string>
    <string name="bn_trailer">Trailers</string>
    <string name="bn_progress">Progress</string>

    // Left Navigation
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="discover">Discover</string>
    <string name="popular_people">Popular People</string>
    <string name="watchlist">Watchlist</string>
    <string name="history">History</string>
    <string name="collection">Collection</string>
    <string name="ratings">Ratings</string>
    <string name="personal_list">Personal List</string>
    <string name="reminders">Reminders</string>
    <string name="hidden_items">Hidden Items</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="ln_title">Moviebase</string>
    <string name="null_string">null</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>

    // Home Strings
    <string name="trending">Trending</string>
    <string name="more">More</string>
    <string name="movies_caps">MOVIES</string>
    <string name="tvShows_caps">TV SHOWS</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_picks">Top Picks</string>
    <string name="upcoming">Upcoming</string>
    <string name="try_again_message">Please connect to the internet and try again.</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
