<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top_group"
        android:checkableBehavior="single">
        <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/bn_home" />
    </group>

    <group
            android:id="@+id/middle_group"
            android:checkableBehavior="single">
        <item
                android:id="@+id/movies"
                android:icon="@drawable/ic_movie"
                android:title="@string/movies" />
        <item
                android:id="@+id/tv_shows"
                android:icon="@drawable/ic_tv_shows"
                android:title="@string/tv_shows" />
        <item
                android:id="@+id/dicover"
                android:icon="@drawable/ic_discover"
                android:title="@string/discover" />
        <item
                android:id="@+id/popular_people"
                android:icon="@drawable/ic_people"
                android:title="@string/popular_people" />
    </group>

    <group
            android:id="@+id/sub_middle_group"
            android:checkableBehavior="single">
        <item
                android:id="@+id/watchlist"
                android:icon="@drawable/ic_watch_list"
                android:title="@string/watchlist" />
        <item
                android:id="@+id/history"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />
        <item
                android:id="@+id/collection"
                android:icon="@drawable/ic_favorite"
                android:title="@string/collection" />
        <item
                android:id="@+id/ratings"
                android:icon="@drawable/ic_ratings"
                android:title="@string/ratings" />
        <item
                android:id="@+id/personal_list"
                android:icon="@drawable/ic_personal_list"
                android:title="@string/personal_list" />
        <item
                android:id="@+id/reminders"
                android:icon="@drawable/ic_reminders"
                android:title="@string/reminders" />
        <item
                android:id="@+id/hidden_items"
                android:icon="@drawable/ic_hidden_item"
                android:title="@string/hidden_items" />
    </group>

    <group
            android:id="@+id/bottom_group"
            android:checkableBehavior="single">
        <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        <item
                android:id="@+id/helps_and_feedback"
                android:icon="@drawable/ic_help_and_feedback"
                android:title="@string/help_feedback" />
    </group>
</menu>