<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/fragment_main_scrollview">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_background">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="90dp"
                android:text="@string/trending"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_movie_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/movies_caps"
                android:textColor="@color/bluegray_80"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_trending_movie_title"
                app:layout_constraintStart_toEndOf="@+id/tv_trending_movie_title"
                app:layout_constraintTop_toTopOf="@+id/tv_trending_movie_title"
                app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_movie_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/more"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_trending_movie_title"
                app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
                android:id="@+id/pb_trending_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_trending_movies"
                app:layout_constraintEnd_toEndOf="@+id/rv_trending_movies"
                app:layout_constraintStart_toStartOf="@+id/rv_trending_movies"
                app:layout_constraintTop_toTopOf="@+id/rv_trending_movies" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_trending_movie_title" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_tvShows_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/trending"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_trending_movies" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_tvShows_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tvShows_caps"
                android:textColor="@color/bluegray_80"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_trending_tvShows_title"
                app:layout_constraintStart_toEndOf="@+id/tv_trending_tvShows_title"
                app:layout_constraintTop_toTopOf="@+id/tv_trending_tvShows_title"
                app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trending_tvShows_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/more"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_trending_tvShows_title"
                app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending_tvShows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_trending_tvShows_title" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_now_playing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/now_playing"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_trending_tvShows" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_now_playing_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/movies_caps"
                android:textColor="@color/bluegray_80"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_now_playing_title"
                app:layout_constraintStart_toEndOf="@+id/tv_now_playing_title"
                app:layout_constraintTop_toTopOf="@+id/tv_now_playing_title"
                app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_now_playing_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/more"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_now_playing_title"
                app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing_title" />

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_top_picks_title"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_netflix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_now_playing" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_top_picks_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/top_picks"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_top_picks_title"
                app:layout_constraintStart_toEndOf="@+id/iv_top_picks_title"
                app:layout_constraintTop_toTopOf="@+id/iv_top_picks_title" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_top_picks_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/more"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_top_picks_subtitle"
                app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_picks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_top_picks_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>